# VectorForge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
api/: server.cpp
benchmarks/: benchmark.py
include/vectorforge/: compute_backend.h  cpu_backend.h  cuda_backend.h  cuda_utils.h  distance.h  distance_kernels.h  flat_index.h  ivf_index.h  kmeans.h  knn_kernels.h  thread_pool.h  types.h
python/: bindings.cpp
scripts/: generate_test_data.py
src/: compute_backend.cpp  distance.cpp  flat_index.cpp  ivf_index.cpp  kmeans.cpp  thread_pool.cpp
src/cuda/: distance_kernels.cu  knn_kernels.cu
tests/: test_api.py  test_basic.cpp  test_distance.cpp  test_flat_index.cpp  test_ivf_index.cpp  test_kmeans.cpp  test_persistence.cpp  test_python_bindings.py  test_thread_pool.cpp
